--- a/app/src/main/res/layout/menu_page.xml
+++ b/app/src/main/res/layout/menu_page.xml
@@ -576,6 +576,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias=".3" />
 
+    <Button
+        android:id="@+id/logData"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Log Data"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintVertical_bias="0.05"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reset" />
+
     <me.grantland.widget.AutofitTextView
         android:id="@+id/daily_no_data"
         android:layout_width="0dp"
