--- a/app/src/main/res/layout/menu_page.xml
+++ b/app/src/main/res/layout/menu_page.xml
@@ -18,7 +18,7 @@
         app:srcCompat="@drawable/options" />
 
     <EditText
-        android:id="@+id/pet_name"
+        android:id="@+id/petName"
         android:layout_width="0dp"
         android:layout_height="73dp"
         android:backgroundTint="@color/none"
@@ -38,7 +38,18 @@
         app:layout_constraintVertical_bias="0.009" />
 
     <ImageView
-        android:id="@+id/coin_image"
+        android:id="@+id/pet"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/div"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/petName"
+        app:layout_constraintVertical_bias="0.3"
+        app:srcCompat="@drawable/pet_png" />
+
+    <ImageView
+        android:id="@+id/coinImage"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:scaleType="centerInside"
@@ -58,26 +69,25 @@
         android:text="100"
         android:textAlignment="center"
         android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/coin_image"
-        app:layout_constraintEnd_toEndOf="@+id/coin_image"
+        app:layout_constraintBottom_toBottomOf="@+id/coinImage"
+        app:layout_constraintEnd_toEndOf="@+id/coinImage"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/coin_image"
-        app:layout_constraintTop_toTopOf="@+id/coin_image"
+        app:layout_constraintStart_toStartOf="@+id/coinImage"
+        app:layout_constraintTop_toTopOf="@+id/coinImage"
         app:layout_constraintVertical_bias="0.68" />
 
     <TextView
-        android:id="@+id/textView2"
         android:layout_width="60dp"
         android:layout_height="15dp"
         android:fontFamily="@font/segoeuithibd"
         android:text="COINS"
         android:textAlignment="center"
         android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/coin_image"
-        app:layout_constraintEnd_toEndOf="@+id/coin_image"
+        app:layout_constraintBottom_toBottomOf="@+id/coinImage"
+        app:layout_constraintEnd_toEndOf="@+id/coinImage"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/coin_image"
-        app:layout_constraintTop_toTopOf="@+id/coin_image"
+        app:layout_constraintStart_toStartOf="@+id/coinImage"
+        app:layout_constraintTop_toTopOf="@+id/coinImage"
         app:layout_constraintVertical_bias="0.9" />
 
     <ImageView
@@ -90,7 +100,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/coin_image"
+        app:layout_constraintTop_toBottomOf="@+id/coinImage"
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/health" />
 
@@ -132,6 +142,7 @@
             app:srcCompat="@drawable/divider" />
 
         <ImageView
+            android:id="@+id/dividerMid"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_weight="0.05"
@@ -627,28 +638,51 @@
         app:layout_constraintStart_toStartOf="@+id/monthly"
         app:layout_constraintTop_toTopOf="@+id/monthly" />
 
-    <androidx.drawerlayout.widget.DrawerLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/drawer_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <ScrollView
+        android:id="@+id/scrollViewDebug"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:background="?attr/colorAccent"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.8">
 
-        <!-- Main content of the screen -->
-        <FrameLayout
-            android:id="@+id/content_frame"
+        <TextView
+            android:id="@+id/logs"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-        <!-- Navigation drawer menu -->
-        <com.google.android.material.navigation.NavigationView
-            android:id="@+id/navigation_view"
-            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:fitsSystemWindows="true"
-            app:menu="@menu/drawer_menu" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+    </ScrollView>
 
-    </androidx.drawerlayout.widget.DrawerLayout>
+    <!--    <androidx.drawerlayout.widget.DrawerLayout-->
+<!--        android:id="@+id/drawer_layout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent">-->
+
+<!--        &lt;!&ndash; Main content of the screen &ndash;&gt;-->
+<!--        <FrameLayout-->
+<!--            android:id="@+id/content_frame"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent">-->
+<!--        </FrameLayout>-->
+
+<!--        &lt;!&ndash; Navigation drawer menu &ndash;&gt;-->
+<!--        <com.google.android.material.navigation.NavigationView-->
+<!--            android:id="@+id/navigation_view"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_gravity="start"-->
+<!--            android:fitsSystemWindows="true"-->
+<!--            app:menu="@menu/drawer_menu" />-->
+
+<!--    </androidx.drawerlayout.widget.DrawerLayout>-->
 
 
 
