--- a/app/src/main/res/layout/menu_page.xml
+++ b/app/src/main/res/layout/menu_page.xml
@@ -21,6 +21,7 @@
         android:id="@+id/petName"
         android:layout_width="0dp"
         android:layout_height="73dp"
+        android:singleLine="true"
         android:backgroundTint="@color/none"
         android:ems="10"
         android:fontFamily="@font/segoeuithibd"
