--- a/app/src/main/res/layout/floating_window.xml
+++ b/app/src/main/res/layout/floating_window.xml
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@android:color/white">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/holder"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:clickable="false"
+    android:focusable="false"
+    android:padding="0dp">
 
-    <!-- Add your content here -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Floating Window" />
-</FrameLayout>
+    <ImageView
+        android:id="@+id/floating_icon"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/floating"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintWidth_percent="0.92"
+        app:layout_constraintHeight_percent="0.2" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
