--- a/app/src/main/res/layout/floating_window.xml
+++ b/app/src/main/res/layout/floating_window.xml
@@ -1,23 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/holder"
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clickable="false"
     android:focusable="false"
-    android:padding="0dp">
+    android:clickable="false">
 
-    <ImageView
-        android:id="@+id/floating_icon"
+    <FrameLayout
+        android:id="@+id/holder"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:src="@drawable/floating"
+        app:layout_constraintWidth_percent="0.9"
+        app:layout_constraintHeight_percent="0.2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintWidth_percent="0.92"
-        app:layout_constraintHeight_percent="0.2" />
+        app:layout_constraintBottom_toBottomOf="parent">
 
+        <ImageView
+            android:id="@+id/message"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerInside"
+            android:src="@drawable/floating"
+            android:focusable="true"
+            android:clickable="true"/>
+    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
