--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/nav_calendar"
-        android:icon="@drawable/sample"
+        android:icon="@drawable/normal"
         android:title="Calendar" />
     <item
         android:id="@+id/nav_shop"
-        android:icon="@drawable/sample2"
+        android:icon="@drawable/normal"
         android:title="Shop" />
     <item
         android:id="@+id/nav_health_center"
-        android:icon="@drawable/sample3"
+        android:icon="@drawable/normal"
         android:title="Health Center" />
 </menu>
