--- a/app/src/main/res/layout/menu_page.xml
+++ b/app/src/main/res/layout/menu_page.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/menu_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,6 +12,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:elevation="2dp"
         android:background="@color/none"
         android:scaleType="centerInside"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,6 +33,7 @@
         android:textSize="40sp"
         android:gravity="center"
         android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="75dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -527,6 +530,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Reset Stats"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -539,6 +543,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Log Data"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -608,29 +613,59 @@
             app:layout_constraintTop_toTopOf="parent"/>
     </ScrollView>
 
-    <androidx.drawerlayout.widget.DrawerLayout
-    android:id="@+id/drawer_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <!-- Main content of the screen -->
-    <FrameLayout
-        android:id="@+id/content_frame"
+    <View
+        android:id="@+id/filter"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </FrameLayout>
-
-    <!-- Navigation drawer menu -->
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/navigation_view"
-        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:menu="@menu/drawer_menu" />
+        android:alpha="0"
+        android:background="@color/darken_filter" />
 
-    </androidx.drawerlayout.widget.DrawerLayout>
+    <View
+        android:id="@+id/drawer"
+        android:layout_width="250dp"
+        android:layout_height="match_parent"
+        android:background="?attr/colorAccent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="parent" />
 
+    <Button
+        android:id="@+id/exit_drawer"
+        android:layout_width="0dp"
+        android:alpha="0"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="parent" />
 
+    <Button
+        android:id="@+id/home"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Home"
+        app:layout_constraintBottom_toTopOf="@+id/summary"
+        app:layout_constraintTop_toTopOf="@+id/drawer"
+        app:layout_constraintStart_toStartOf="@+id/drawer"
+        app:layout_constraintEnd_toEndOf="@+id/drawer" />
+
+    <Button
+        android:id="@+id/summary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Summary"
+        app:layout_constraintBottom_toTopOf="@+id/mental_health_data"
+        app:layout_constraintTop_toBottomOf="@+id/home"
+        app:layout_constraintStart_toStartOf="@+id/drawer"
+        app:layout_constraintEnd_toEndOf="@+id/drawer" />
+
+    <Button
+        android:id="@+id/mental_health_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Mental health data"
+        app:layout_constraintBottom_toBottomOf="@+id/drawer"
+        app:layout_constraintTop_toBottomOf="@+id/summary"
+        app:layout_constraintStart_toStartOf="@+id/drawer"
+        app:layout_constraintEnd_toEndOf="@+id/drawer" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
