--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -654,9 +654,9 @@
         android:layout_height="wrap_content"
         android:text="Summary"
         app:layout_constraintBottom_toTopOf="@+id/mental_health_data"
-        app:layout_constraintTop_toBottomOf="@+id/home"
+        app:layout_constraintEnd_toEndOf="@+id/drawer"
         app:layout_constraintStart_toStartOf="@+id/drawer"
-        app:layout_constraintEnd_toEndOf="@+id/drawer" />
+        app:layout_constraintTop_toBottomOf="@+id/home" />
 
     <Button
         android:id="@+id/mental_health_data"
