--- a/app/src/main/res/layout/summary_page.xml
+++ b/app/src/main/res/layout/summary_page.xml
@@ -1,6 +1,289 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/summary_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <ImageButton
+        android:id="@+id/popDrawer"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:elevation="2dp"
+        android:background="@color/none"
+        android:scaleType="centerInside"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/options" />
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="0dp"
+        android:textColor="@color/opposite"
+        android:layout_height="wrap_content"
+        android:text="Data summary"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/citrus"
+        android:textSize="37sp"
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/daily"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Today"
+        android:background="@drawable/button_activated_rounded_pro_max"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/citrus"
+        android:textSize="20sp"
+        android:textColor="@color/activatedTextColor"
+        android:layout_marginHorizontal="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/weekly"
+        app:layout_constraintTop_toBottomOf="@+id/title" />
+
+    <Button
+        android:id="@+id/weekly"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Weekly"
+        android:background="@drawable/button_unactivated_rounded_pro_max"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/citrus"
+        android:textSize="20sp"
+        android:textColor="@color/unactivatedTextColor"
+        android:layout_marginHorizontal="16dp"
+        app:layout_constraintStart_toEndOf="@id/daily"
+        app:layout_constraintEnd_toStartOf="@id/monthly"
+        app:layout_constraintTop_toBottomOf="@+id/title" />
+
+    <Button
+        android:id="@+id/monthly"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Monthly"
+        android:background="@drawable/button_unactivated_rounded_pro_max"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/citrus"
+        android:textSize="20sp"
+        android:textColor="@color/unactivatedTextColor"
+        android:layout_marginHorizontal="16dp"
+        app:layout_constraintStart_toEndOf="@id/weekly"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title" />
+
+    <!--Daily data layout-->
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/daily_layout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/weekly"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <TextView
+            android:id="@+id/day"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="14"
+            android:textColor="@color/opposite"
+            android:fontFamily="@font/citrus"
+            android:textSize="60sp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/month"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="january"
+            android:textColor="@color/opposite"
+            android:fontFamily="@font/citrus"
+            android:textSize="30sp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/day" />
+        
+        <View
+            android:id="@+id/div_vertical"
+            android:layout_width="3dp"
+            android:layout_height="135dp"
+            android:background="@color/opposite"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:text="8:30PM"
+            android:textColor="@color/opposite"
+            android:fontFamily="@font/citrus"
+            android:textSize="20sp"
+            app:layout_constraintStart_toEndOf="@id/div_vertical"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <View
+            android:id="@+id/top_app"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="13dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/rounded_corner_variant_1"
+            app:layout_constraintStart_toEndOf="@id/div_vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/time"
+            app:layout_constraintBottom_toTopOf="@id/div_horizontal" />
+
+        <ImageView
+            android:id="@+id/app_icon"
+            android:layout_width="50dp"
+            android:layout_height="0dp"
+            android:src="@drawable/sample"
+            android:layout_marginVertical="10dp"
+            android:layout_marginStart="10dp"
+            android:scaleType="centerInside"
+            app:layout_constraintStart_toStartOf="@id/top_app"
+            app:layout_constraintTop_toTopOf="@id/top_app"
+            app:layout_constraintBottom_toTopOf="@id/most_used" />
+
+        <me.grantland.widget.AutofitTextView
+            android:id="@+id/app_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="?attr/colorPrimary"
+            android:fontFamily="@font/citrus"
+            android:textSize="20sp"
+            android:text="Instagram"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:singleLine="true"
+            android:layout_marginHorizontal="10dp"
+            app:layout_constraintStart_toEndOf="@id/app_icon"
+            app:layout_constraintTop_toTopOf="@id/app_icon"
+            app:layout_constraintBottom_toBottomOf="@id/app_icon"
+            app:layout_constraintEnd_toEndOf="@+id/top_app" />
+
+        <TextView
+            android:id="@+id/most_used"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Most used app"
+            android:textAlignment="viewStart"
+            android:textColor="?attr/colorPrimary"
+            android:fontFamily="@font/citrus"
+            android:textSize="15sp"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintStart_toStartOf="@id/top_app"
+            app:layout_constraintTop_toBottomOf="@id/app_icon"
+            app:layout_constraintBottom_toBottomOf="@id/top_app"
+            app:layout_constraintEnd_toEndOf="@+id/top_app" />
+
+        <View
+            android:id="@+id/div_horizontal"
+            android:layout_width="0dp"
+            android:layout_height="3dp"
+            android:background="@color/opposite"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/div_vertical" />
+
+        <ScrollView
+            android:id="@+id/daily_apps_container"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/div_horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/apps"/>
+
+        </ScrollView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <View
+        android:id="@+id/filter"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0"
+        android:elevation="2dp"
+        android:background="@color/darken_filter" />
+
+    <View
+        android:id="@+id/drawer"
+        android:layout_width="250dp"
+        android:layout_height="match_parent"
+        android:background="?attr/colorAccent"
+        android:elevation="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/exit_drawer"
+        android:layout_width="0dp"
+        android:alpha="0"
+        android:layout_height="match_parent"
+        android:elevation="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/home"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Home"
+        android:elevation="2dp"
+        app:layout_constraintBottom_toTopOf="@+id/summary"
+        app:layout_constraintTop_toTopOf="@+id/drawer"
+        app:layout_constraintStart_toStartOf="@+id/drawer"
+        app:layout_constraintEnd_toEndOf="@+id/drawer" />
+
+    <Button
+        android:id="@+id/summary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Summary"
+        android:elevation="7dp"
+        app:layout_constraintBottom_toTopOf="@+id/mental_health_data"
+        app:layout_constraintEnd_toEndOf="@+id/drawer"
+        app:layout_constraintStart_toStartOf="@+id/drawer"
+        app:layout_constraintTop_toBottomOf="@+id/home" />
+
+    <Button
+        android:id="@+id/mental_health_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Mental health data"
+        android:elevation="7dp"
+        app:layout_constraintBottom_toBottomOf="@+id/drawer"
+        app:layout_constraintTop_toBottomOf="@+id/summary"
+        app:layout_constraintStart_toStartOf="@+id/drawer"
+        app:layout_constraintEnd_toEndOf="@+id/drawer" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
