--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,7 +3,7 @@
     <style name="Theme.Overseer" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/medj_black</item>
-        <item name="colorPrimaryVariant">@color/medj_white2</item>
+        <item name="colorPrimaryVariant">@color/white</item>
         <item name="colorOnPrimary">@color/black</item>
         <item name="colorPrimaryDark">@color/medj_black</item>
         <item name="colorAccent">@color/medj_black2</item>
@@ -13,4 +13,6 @@
     <color name="buttonBorderColor">#FFFFFF</color>
     <color name="opposite">#FFFFFF</color>
     <color name="unactivatedColor">@color/medj_black</color>
+    <color name="unactivatedTextColor">@color/opposite</color>
+    <color name="activatedTextColor">@color/unactivatedColor</color>
 </resources>
