--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,14 +2,16 @@
     <!-- Base application theme. -->
     <style name="Theme.Overseer" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorPrimary">@color/medj_white</item>
-        <item name="colorPrimaryVariant">@color/medj_black</item>
+        <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="colorPrimaryDark">@color/medj_white</item>
         <item name="colorAccent">@color/medj_white2</item>
     </style>
 
-    <color name="buttonColor">#EB4A4C</color>
-    <color name="buttonBorderColor">#000000</color>
-    <color name="opposite">#000000</color>
-    <color name="unactivatedColor">@color/medj_white</color>
+    <color name="buttonColor">#07EADA</color>
+    <color name="buttonBorderColor">#FFFFFF</color>
+    <color name="opposite">#FFFFFF</color>
+    <color name="unactivatedColor">@color/medj_black</color>
+    <color name="unactivatedTextColor">@color/opposite</color>
+    <color name="activatedTextColor">@color/unactivatedColor</color>
 </resources>
