--- a/app/src/main/res/layout/summary_page.xml
+++ b/app/src/main/res/layout/summary_page.xml
@@ -238,52 +238,155 @@
         android:layout_width="250dp"
         android:layout_height="match_parent"
         android:background="?attr/colorAccent"
-        android:elevation="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="parent" />
+
 
     <Button
         android:id="@+id/exit_drawer"
         android:layout_width="0dp"
         android:alpha="0"
         android:layout_height="match_parent"
-        android:elevation="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="parent" />
 
+    <ImageView
+        android:id="@+id/top"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/top"
+        android:layout_margin="-20dp"
+        app:layout_constraintDimensionRatio="16:8"
+        app:layout_constraintTop_toTopOf="@id/drawer"
+        app:layout_constraintEnd_toEndOf="@id/drawer"
+        app:layout_constraintStart_toStartOf="@id/drawer" />
+
+    <ImageView
+        android:id="@+id/home_icon"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/home"
+        android:scaleX="0.7"
+        android:scaleY="0.7"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintTop_toBottomOf="@+id/top"
+        app:layout_constraintStart_toStartOf="@+id/drawer"
+        app:layout_constraintBottom_toBottomOf="@id/home" />
+
+
     <Button
         android:id="@+id/home"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@color/none"
         android:text="Home"
-        android:elevation="2dp"
-        app:layout_constraintBottom_toTopOf="@+id/summary"
-        app:layout_constraintTop_toTopOf="@+id/drawer"
+        android:fontFamily="@font/citrus"
+        android:paddingTop="4dp"
+        android:paddingStart="20dp"
+        android:textSize="30sp"
+        android:gravity="start|center"
+        android:textColor="@color/unactivatedTextColor"
+        app:layout_constraintTop_toBottomOf="@+id/top"
+        app:layout_constraintStart_toEndOf="@+id/home_icon"
+        app:layout_constraintEnd_toEndOf="@id/drawer"/>
+
+    <ImageView
+        android:id="@+id/summary_icon"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/summary"
+        android:scaleX="0.5"
+        android:scaleY="0.5"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintTop_toBottomOf="@+id/home_icon"
         app:layout_constraintStart_toStartOf="@+id/drawer"
-        app:layout_constraintEnd_toEndOf="@+id/drawer" />
+        app:layout_constraintBottom_toBottomOf="@id/summary" />
 
     <Button
         android:id="@+id/summary"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@color/none"
         android:text="Summary"
-        android:elevation="7dp"
-        app:layout_constraintBottom_toTopOf="@+id/mental_health_data"
-        app:layout_constraintEnd_toEndOf="@+id/drawer"
+        android:fontFamily="@font/citrus"
+        android:paddingTop="4dp"
+        android:paddingStart="20dp"
+        android:textSize="30sp"
+        android:gravity="start|center"
+        app:layout_constraintStart_toEndOf="@id/summary_icon"
+        app:layout_constraintEnd_toEndOf="@id/drawer"
+        app:layout_constraintTop_toBottomOf="@id/home" />
+
+    <ImageView
+        android:id="@+id/mental_health_icon"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/mind_health"
+        android:scaleX="0.6"
+        android:scaleY="0.6"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintTop_toBottomOf="@+id/summary"
         app:layout_constraintStart_toStartOf="@+id/drawer"
-        app:layout_constraintTop_toBottomOf="@+id/home" />
+        app:layout_constraintBottom_toBottomOf="@id/mental_health_data" />
 
     <Button
         android:id="@+id/mental_health_data"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Mental health data"
-        android:elevation="7dp"
-        app:layout_constraintBottom_toBottomOf="@+id/drawer"
-        app:layout_constraintTop_toBottomOf="@+id/summary"
+        android:background="@color/none"
+        android:text="Mental Health"
+        android:fontFamily="@font/citrus"
+        android:paddingTop="4dp"
+        android:paddingStart="20dp"
+        android:textSize="30sp"
+        android:gravity="start|center"
+        app:layout_constraintStart_toEndOf="@id/summary_icon"
+        app:layout_constraintEnd_toEndOf="@id/drawer"
+        app:layout_constraintTop_toBottomOf="@id/summary" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:background="@color/buttonBorderColor"
+        app:layout_constraintStart_toStartOf="@id/drawer"
+        app:layout_constraintEnd_toEndOf="@id/drawer"
+        app:layout_constraintTop_toBottomOf="@id/mental_health_data" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:background="@color/buttonBorderColor"
+        app:layout_constraintStart_toStartOf="@id/drawer"
+        app:layout_constraintEnd_toEndOf="@id/drawer"
+        app:layout_constraintTop_toBottomOf="@id/mental_health_data" />
+
+    <ImageView
+        android:id="@+id/account_icon"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/account"
+        android:scaleX="0.6"
+        android:scaleY="0.6"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintTop_toTopOf="@+id/account"
         app:layout_constraintStart_toStartOf="@+id/drawer"
-        app:layout_constraintEnd_toEndOf="@+id/drawer" />
+        app:layout_constraintBottom_toBottomOf="@id/account" />
+
+    <Button
+        android:id="@+id/account"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/none"
+        android:text="Account"
+        android:fontFamily="@font/citrus"
+        android:paddingTop="4dp"
+        android:paddingStart="20dp"
+        android:textSize="30sp"
+        android:gravity="start|center"
+        app:layout_constraintStart_toEndOf="@id/summary_icon"
+        app:layout_constraintEnd_toEndOf="@id/drawer"
+        app:layout_constraintBottom_toBottomOf="@id/drawer" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
