--- a/app/src/main/res/layout/summary_page.xml
+++ b/app/src/main/res/layout/summary_page.xml
@@ -347,6 +347,7 @@
         app:layout_constraintTop_toBottomOf="@id/summary" />
 
     <View
+        android:id="@+id/line1"
         android:layout_width="0dp"
         android:layout_height="2dp"
         android:background="@color/buttonBorderColor"
@@ -355,6 +356,7 @@
         app:layout_constraintTop_toBottomOf="@id/mental_health_data" />
 
     <View
+        android:id="@+id/line2"
         android:layout_width="0dp"
         android:layout_height="2dp"
         android:background="@color/buttonBorderColor"
