--- a/app/src/main/res/layout/summary_page.xml
+++ b/app/src/main/res/layout/summary_page.xml
@@ -236,6 +236,7 @@
     <View
         android:id="@+id/drawer"
         android:layout_width="250dp"
+        android:elevation="2dp"
         android:layout_height="match_parent"
         android:background="?attr/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -248,6 +249,7 @@
         android:layout_width="0dp"
         android:alpha="0"
         android:layout_height="match_parent"
+        android:elevation="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="parent" />
@@ -258,6 +260,7 @@
         android:layout_height="0dp"
         android:src="@drawable/top"
         android:layout_margin="-20dp"
+        android:elevation="2dp"
         app:layout_constraintDimensionRatio="16:8"
         app:layout_constraintTop_toTopOf="@id/drawer"
         app:layout_constraintEnd_toEndOf="@id/drawer"
@@ -270,6 +273,7 @@
         android:src="@drawable/home"
         android:scaleX="0.7"
         android:scaleY="0.7"
+        android:elevation="2dp"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintTop_toBottomOf="@+id/top"
         app:layout_constraintStart_toStartOf="@+id/drawer"
@@ -286,6 +290,7 @@
         android:paddingTop="4dp"
         android:paddingStart="20dp"
         android:textSize="30sp"
+        android:elevation="2dp"
         android:gravity="start|center"
         android:textColor="@color/unactivatedTextColor"
         app:layout_constraintTop_toBottomOf="@+id/top"
@@ -299,6 +304,7 @@
         android:src="@drawable/summary"
         android:scaleX="0.5"
         android:scaleY="0.5"
+        android:elevation="2dp"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintTop_toBottomOf="@+id/home_icon"
         app:layout_constraintStart_toStartOf="@+id/drawer"
@@ -311,6 +317,7 @@
         android:background="@color/none"
         android:text="Summary"
         android:fontFamily="@font/citrus"
+        android:elevation="2dp"
         android:paddingTop="4dp"
         android:paddingStart="20dp"
         android:textSize="30sp"
@@ -325,6 +332,7 @@
         android:layout_height="0dp"
         android:src="@drawable/mind_health"
         android:scaleX="0.6"
+        android:elevation="2dp"
         android:scaleY="0.6"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintTop_toBottomOf="@+id/summary"
@@ -340,6 +348,7 @@
         android:fontFamily="@font/citrus"
         android:paddingTop="4dp"
         android:paddingStart="20dp"
+        android:elevation="2dp"
         android:textSize="30sp"
         android:gravity="start|center"
         app:layout_constraintStart_toEndOf="@id/summary_icon"
@@ -350,6 +359,7 @@
         android:id="@+id/line1"
         android:layout_width="0dp"
         android:layout_height="2dp"
+        android:elevation="2dp"
         android:background="@color/buttonBorderColor"
         app:layout_constraintStart_toStartOf="@id/drawer"
         app:layout_constraintEnd_toEndOf="@id/drawer"
@@ -358,6 +368,7 @@
     <View
         android:id="@+id/line2"
         android:layout_width="0dp"
+        android:elevation="2dp"
         android:layout_height="2dp"
         android:background="@color/buttonBorderColor"
         app:layout_constraintStart_toStartOf="@id/drawer"
@@ -369,6 +380,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:src="@drawable/account"
+        android:elevation="2dp"
         android:scaleX="0.6"
         android:scaleY="0.6"
         app:layout_constraintDimensionRatio="1:1"
@@ -382,6 +394,7 @@
         android:layout_height="wrap_content"
         android:background="@color/none"
         android:text="Account"
+        android:elevation="2dp"
         android:fontFamily="@font/citrus"
         android:paddingTop="4dp"
         android:paddingStart="20dp"
