--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,10 +8,10 @@
         <item name="colorAccent">@color/medj_white2</item>
     </style>
 
-    <color name="buttonColor">#07EADA</color>
-    <color name="buttonBorderColor">#FFFFFF</color>
-    <color name="opposite">#FFFFFF</color>
-    <color name="unactivatedColor">@color/medj_black</color>
+    <color name="buttonColor">#ED5050</color>
+    <color name="buttonBorderColor">@color/black</color>
+    <color name="opposite">@color/black</color>
+    <color name="unactivatedColor">@color/medj_white</color>
     <color name="unactivatedTextColor">@color/opposite</color>
-    <color name="activatedTextColor">@color/unactivatedColor</color>
+    <color name="activatedTextColor">@color/medj_white</color>
 </resources>
