--- a/app/src/main/res/drawable/button_unactivated_rounded_pro_max.xml
+++ b/app/src/main/res/drawable/button_unactivated_rounded_pro_max.xml
@@ -12,5 +12,5 @@
 
 <stroke
     android:width="3dp"
-    android:color="@color/buttonBorderColor" />
+    android:color="@color/opposite" />
 </shape>
