--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -624,7 +624,7 @@
         android:id="@+id/drawer"
         android:layout_width="250dp"
         android:layout_height="match_parent"
-        android:background="?attr/colorAccent"
+        android:background="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="parent" />
@@ -674,7 +674,7 @@
         android:paddingStart="20dp"
         android:textSize="30sp"
         android:gravity="start|center"
-        android:textColor="@color/unactivatedTextColor"
+        android:textColor="@color/buttonColor"
         app:layout_constraintTop_toBottomOf="@+id/top"
         app:layout_constraintStart_toEndOf="@+id/home_icon"
         app:layout_constraintEnd_toEndOf="@id/drawer"/>
@@ -702,6 +702,7 @@
         android:paddingStart="20dp"
         android:textSize="30sp"
         android:gravity="start|center"
+        android:textColor="@color/unactivatedTextColor"
         app:layout_constraintStart_toEndOf="@id/summary_icon"
         app:layout_constraintEnd_toEndOf="@id/drawer"
         app:layout_constraintTop_toBottomOf="@id/home" />
@@ -729,6 +730,7 @@
         android:paddingStart="20dp"
         android:textSize="30sp"
         android:gravity="start|center"
+        android:textColor="@color/unactivatedTextColor"
         app:layout_constraintStart_toEndOf="@id/summary_icon"
         app:layout_constraintEnd_toEndOf="@id/drawer"
         app:layout_constraintTop_toBottomOf="@id/summary" />
@@ -749,7 +751,7 @@
         android:background="@color/buttonBorderColor"
         app:layout_constraintStart_toStartOf="@id/drawer"
         app:layout_constraintEnd_toEndOf="@id/drawer"
-        app:layout_constraintTop_toBottomOf="@id/mental_health_data" />
+        app:layout_constraintBottom_toTopOf="@id/account" />
 
     <ImageView
         android:id="@+id/account_icon"
